# silver

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  example_config.toml  license  readme.md  rustfmt.toml  silver.toml
.github/workflows/: rust.yml
silver/: Cargo.toml
silver-core/: Cargo.toml
silver-core/src/: icons.rs  lib.rs  prompt.rs  sh.rs  test.rs
silver-core/src/modules/: cmd.rs  cmdtime.rs  conda.rs  dir.rs  git.rs  mod.rs  os.rs  shell.rs  status.rs  time.rs  toolbox.rs  user.rs  virtualenv.rs
silver/src/: cli.rs  config.rs  init.bash  init.fish  init.ion  init.powershell  init.zsh
src/: cli.rs  config.rs  icons.rs  init.bash  init.fish  init.ion  init.powershell  init.ps1  init.zsh  main.rs  print.rs  sh.rs
src/modules/: cmdtime.rs  conda.rs  dir.rs  env.rs  git.rs  mod.rs  os.rs  shell.rs  status.rs  time.rs  toolbox.rs  user.rs  usercmd.rs  virtualenv.rs
