[package]
name = "silver"
version = "2.0.1"
authors = ["reujab <reujab@gmail.com>"]

description = "A cross-shell customizable powerline-like prompt with icons"
repository = "https://github.com/reujab/silver"
readme = "readme.md"
keywords = ["shell", "prompt", "powerline", "agnoster", "icons"]
categories = ["command-line-utilities"]
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
confy = { version = "0.5", features = [ "yaml_conf" ], default-features = false }
dirs = "2"
git2 = { version = "0.18", default-features = false }
hostname = "0.3"
humantime = "2"
humantime-serde = "1.0"
once_cell = "1.4"
lazy_static = "1.4"
libc = "0.2"
regex = "1"
rust-ini = "0.17"
url = "2"
shellexpand = "2.0"
sysinfo = "0.23"

[target.'cfg(not(windows))'.dependencies]
users = { version = "0.11", package = "uzers" }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "handleapi",
    "processthreadsapi",
    "securitybaseapi"
]
