[package]
name = "silver_core"
version = "0.1.0"
authors = ["reujab <reujab@gmail.com>"]
keywords = ["shell", "prompt", "icons"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humantime = "2.0"
crossterm = "0.17"
shellexpand = "2.0"
dirs = "3.0"
url = "2.1"
git2 = "0.13"
sysinfo = "0.15"
is-root = "0.1"
whoami = "0.9"
chrono = "0.4.15"
regex = "1.3"

[target.'cfg(target_os = "linux")'.dependencies]
os_info = "2.0"
